[package]
name = "zksnark-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksnark = "0.0.2"
bellman = "0.11.1"
bls12_381 = "0.6.0"
ff = "0.11.0"
pairing = "0.21.0"
rand = "0.8.5"
sha2 = "0.10.2"

humantime = "2.1.0"

jemalloc-ctl = "0.3.3"
jemallocator = "0.3.2"
